--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@endge/raph",
   "private": false,
-  "version": "2.0.1",
+  "version": "2.0.2",
   "description": "Reactive application pipeline & router (Raph) — core library",
   "license": "Apache-2.0",
   "type": "module",
@@ -24,7 +24,8 @@
     "dev": "vite build --watch",
     "build": "vue-tsc --noCheck && vite build",
     "preview": "vite preview",
-    "test": "vitest"
+    "test": "vitest",
+    "publish": "npm publish --access public"
   },
   "devDependencies": {
     "typescript": "^5.5.4",
